[tool.poetry]
name = "vectorfriends-cloud-task"
version = "0.1.0"
description = ""
authors = ["jalakoo <jalakoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
basicauth = "^1.0.0"
functions-framework = "^3.7.0"
google-cloud-tasks = "^2.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
